[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Background/Esileht/Nupp_3.png" type="Texture" id=1]
[ext_resource path="res://objektid/Alusta.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Background/Esileht/Esileht_nuppudeta.png" type="Texture" id=3]
[ext_resource path="res://assets/Background/Esileht/Nupp_1.png" type="Texture" id=4]
[ext_resource path="res://assets/helid/taustamuusika2.wav" type="AudioStream" id=5]
[ext_resource path="res://objektid/Info.gd" type="Script" id=6]
[ext_resource path="res://assets/Background/Esileht/Nupp_kinni_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/Background/Esileht/Nupp_kinni_lilla.png" type="Texture" id=8]
[ext_resource path="res://assets/Background/Esileht/Nupp_1b.png" type="Texture" id=9]
[ext_resource path="res://assets/Background/Esileht/Nupp_heli_stop_lilla.png" type="Texture" id=10]
[ext_resource path="res://assets/Background/Esileht/Nupp_heli_lilla.png" type="Texture" id=11]
[ext_resource path="res://assets/Background/Esileht/Nupp_2b.png" type="Texture" id=12]
[ext_resource path="res://assets/Background/Esileht/Nupp_heli_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/Background/Esileht/Nupp_3b.png" type="Texture" id=14]
[ext_resource path="res://montserrat_regular.tres" type="DynamicFont" id=15]
[ext_resource path="res://xerox_serif_wide_bold.tres" type="DynamicFont" id=16]
[ext_resource path="res://assets/zorque_small.tres" type="DynamicFont" id=17]
[ext_resource path="res://src/LineEditValidation.gd" type="Script" id=18]

[node name="UserInterface" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="taust_FINAL (1)" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -471.79
margin_top = 271.86
margin_right = 476.21
margin_bottom = 507.86
columns = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Juhend" type="TextureButton" parent="GridContainer"]
margin_right = 313.0
margin_bottom = 236.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Alusta" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 317.0
margin_right = 630.0
margin_bottom = 236.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 3
script = null

[node name="Tiim" type="TextureButton" parent="GridContainer"]
margin_left = 634.0
margin_right = 947.0
margin_bottom = 236.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 1789.15
margin_top = 67.6833
margin_right = 1863.15
margin_bottom = 181.683
hint_tooltip = "VÃ¤lju"
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 4.03
action_mode = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SoundON2" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.265
margin_left = -267.264
margin_top = 54.2185
margin_right = -180.264
margin_bottom = -148.982
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 12
size_flags_stretch_ratio = 4.03
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SoundOFF" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.265
margin_left = -266.763
margin_top = 54.0975
margin_right = -179.763
margin_bottom = -149.103
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 12
size_flags_stretch_ratio = 4.03
toggle_mode = true
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HTTPPOSTRequest" type="HTTPRequest" parent="."]

[node name="Kasutajanimi2" type="Label" parent="."]
margin_left = 841.188
margin_top = 517.76
margin_right = 1096.19
margin_bottom = 562.76
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.117647, 0.670588, 0.670588, 1 )
text = "Kasutajanimi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kasutajanimi" type="LineEdit" parent="."]
anchor_top = 0.0012797
anchor_bottom = 0.0012797
margin_left = 839.127
margin_top = 551.407
margin_right = 1097.13
margin_bottom = 597.407
custom_fonts/font = ExtResource( 15 )
custom_colors/selection_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
max_length = 10
clear_button_enabled = true
selecting_enabled = false
caret_blink = true
caret_blink_speed = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kood2" type="Label" parent="."]
margin_left = 842.705
margin_top = 603.565
margin_right = 1099.71
margin_bottom = 646.565
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.117647, 0.670588, 0.670588, 1 )
text = "Kood"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kood" type="LineEdit" parent="."]
margin_left = 841.327
margin_top = 637.072
margin_right = 1101.33
margin_bottom = 683.072
custom_fonts/font = ExtResource( 15 )
custom_colors/selection_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_colors/cursor_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
caret_blink = true
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Vastus" type="Label" parent="."]
margin_left = 842.0
margin_top = 689.0
margin_right = 1100.0
margin_bottom = 773.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.976471, 0.00392157, 0.00392157, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPUpdateRequest2" type="HTTPRequest" parent="."]

[node name="HTTPGetRequest2" type="HTTPRequest" parent="."]
[connection signal="pressed" from="GridContainer/Juhend" to="." method="_on_Juhend_pressed"]
[connection signal="pressed" from="GridContainer/Alusta" to="." method="_on_Alusta_pressed"]
[connection signal="pressed" from="GridContainer/Tiim" to="." method="_on_Tiim_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SoundON2" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="SoundOFF" to="." method="_on_Sound_pressed"]
[connection signal="request_completed" from="HTTPPOSTRequest" to="." method="_on_HTTPPOSTRequest_request_completed"]
[connection signal="text_changed" from="Kasutajanimi" to="Kasutajanimi" method="_on_Kasutajanimi_text_changed"]
[connection signal="text_changed" from="Kood" to="Kood" method="_on_Kood_text_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPUpdateRequest2" to="." method="_on_HTTPUpdateRequest2_request_completed"]
[connection signal="request_completed" from="HTTPGetRequest2" to="." method="_on_HTTPGetRequest2_request_completed"]
